deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {APP}
  namespace: {APP}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: {APP}
  template:
    metadata:
      labels:
        app: {APP}
    spec:
      containers:
      - image: {CONTAINER_IMAGE}
        name: {APP}
        ports:
        - containerPort: 3001
          name: {APP}
