svc_ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: {APP}
  namespace: {APP}
spec:
  rules:
  - host: {FQDN}
    http:
      paths:
      - path: /{ING_PATH}
        backend:
          serviceName: {APP}
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: {APP}
  namespace: {APP}
spec:
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: {APP}
  type: ClusterIP
